--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
-Emotion and Gender Recognition System Requirements
-Follow these steps to install all dependencies:
-
-Windows:
-1. Create and activate virtual environment:
-   python -m venv venv
-   .\venv\Scripts\activate
-
-macOS/Linux:
-1. Create and activate virtual environment:
-   python3 -m venv venv
-   source venv/bin/activate
-
-Then for all systems:
-2. Install requirements:
-   pip install -r requirements.txt
-
-Note: If you have NVIDIA GPU and want to use CUDA:
-- Remove torch, torchvision, torchaudio lines below
-- Run: pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
-
-Common issues:
-- If dlib installation fails, install CMake and Visual Studio Build Tools first
-- For Windows: Download Visual Studio Build Tools from https://visualstudio.microsoft.com/visual-cpp-build-tools/
-- For macOS: Install Xcode Command Line Tools: xcode-select --install
+# Emotion and Gender Recognition System Requirements
+# Follow these steps to install all dependencies:
+#
+# Windows:
+# 1. Create and activate virtual environment:
+#    python -m venv venv
+#    .\venv\Scripts\activate
+#
+# macOS/Linux:
+# 1. Create and activate virtual environment:
+#    python3 -m venv venv
+#    source venv/bin/activate
+#
+# Then for all systems:
+# 2. Install requirements:
+#    pip install -r requirements.txt
+#
+# IMPORTANT: Model Path Configuration
+# Before running real-time_trial.py, you need to modify the model path:
+# 1. Open real-time_trial.py in a text editor
+# 2. Look for the line loading the model (something like):
+#    model = torch.load('/path/to/model.pth')
+# 3. Change the path to match where you downloaded the model file on your system
+# Example:
+# - Windows: model = torch.load('C:/Users/YourUsername/Downloads/model.pth')
+# - macOS/Linux: model = torch.load('/home/yourusername/Downloads/model.pth')
+#
+# Note: If you have NVIDIA GPU and want to use CUDA:
+# - Remove torch, torchvision, torchaudio lines below
+# - Run: pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+#
+# Common issues:
+# - If dlib installation fails, install CMake and Visual Studio Build Tools first
+# - For Windows: Download Visual Studio Build Tools from https://visualstudio.microsoft.com/visual-cpp-build-tools/
+# - For macOS: Install Xcode Command Line Tools: xcode-select --install
 
 # Core Machine Learning Libraries
 numpy>=1.19.5
@@ -42,7 +52,8 @@ dlib>=19.22.0
 pandas>=1.3.0
 matplotlib>=3.4.3
 
-Optional but recommended for better performance
-opencv-contrib-python>=4.5.4  # Additional OpenCV modules
-scipy>=1.7.0                  # Scientific computing
-tqdm>=4.62.0                 # Progress bars
+# Optional but recommended for better performance
+# uncomment if needed:
+# opencv-contrib-python>=4.5.4  # Additional OpenCV modules
+# scipy>=1.7.0                  # Scientific computing
+# tqdm>=4.62.0                 # Progress bars
